5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4496/executions/1573_1332.log
== TEST (2019-04-06 14:41:59) 
-- CODE:
aresta = 5
area = 3/2 * 3 * a
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3/2 * 3 * a
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:42:22) 
-- CODE:
aresta = 5
area = round (3/2 * 3 * a)
 
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = round (3/2 * 3 * a)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-06 14:43:58) 
-- CODE:
aresta = 5
area = (num 3/2 * 3 * a)
 
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = (num 3/2 * 3 * a)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 21:57:08) 
-- CODE:
aresta = 5
area = 3//2 * 1.5 ** 2
 
print(round(area, 4))
-- OUTPUT:
2.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 21:57:30) 
-- CODE:
aresta = 5
area = 3//2 * 1.5 ** 2
 print(round(area, 4))
-- EXECUTION TIME:
0.214347
-- ERROR:
  File "/home/codebench/codes/1573/1332/main.py", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:15:24) 
-- CODE:
aresta = 5
area = 3//2 * 1.73**2
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:15:36) 
-- CODE:
aresta = 5
area = 3//2 * 1.73 ** 2
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:16:11) 
-- CODE:
aresta = 5
area = 3//2 * 1.7320 ** 2
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:18:03) 
-- CODE:
aresta = 5
area = 3//2 * 1.73 ** 2
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:18:12) 
-- CODE:
aresta = 5
area = (3//2 * 1.73 ** 2)
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:18:48) 
-- CODE:
aresta = 5
area = (3//2 * 1.73 ^ 2)
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:19:18) 
-- CODE:
aresta = 5
area = (3//2 * 3a ** 2)
 print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = (3//2 * 3a ** 2)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:19:43) 
-- CODE:
aresta = 5
area = (3//2 * 3 )
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:19:56) 
-- CODE:
aresta = 5
area = (3//2*3)
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:20:07) 
-- CODE:
aresta = 5
area = 3//2*3
 print(round(area, 4))
-- ERROR:
File "XXXX", line 3
    print(round(area, 4))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:20:37) 
-- CODE:
aresta = 5
area = 3//2 * 1.7320 **2
print(round(area, 4))
-- OUTPUT:
2.9998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:20:53) 
-- CODE:
aresta = 5
area = 3//2 * 1.7320 **2
print(round(area, 4))
-- EXECUTION TIME:
0.198178
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
2.9998
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:24:32) 
-- CODE:
aresta = 5
area = 3//2 * 1.7320 ** 2
print(round(area, 4))
-- OUTPUT:
2.9998
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:33:23) 
-- CODE:
aresta = 5
area = 3//2(3(1/2))
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3//2(3(1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:33:36) 
-- CODE:
aresta = 5
area = 3//2*3(1/2)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 3//2*3(1/2)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:33:51) 
-- CODE:
aresta = 5
area = int(3//2*3(1/2))
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = int(3//2*3(1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:34:28) 
-- CODE:
aresta = 5
area = int3//2*3**0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = int3//2*3**0.5
NameError: name 'int3' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:34:59) 
-- CODE:
aresta = 5
area = int 3//2 * 3 ** 0.5
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = int 3//2 * 3 ** 0.5
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:35:11) 
-- CODE:
aresta = 5
area = int 3//2 * 3 ** 0.5
print(round(area, 4))
-- ERROR:
File "XXXX", line 2
    area = int 3//2 * 3 ** 0.5
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:35:23) 
-- CODE:
aresta = 5
area = int (3//2 * 3 ** 0.5)
print(round(area, 4))
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:35:33) 
-- CODE:
aresta = 5
area = int (3//2 * 3 ** 0.5)
print(round(area, 4))
-- EXECUTION TIME:
0.134535
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:36:03) 
-- CODE:
aresta = 5
area = (3//2 * 3 ** 0.5)
print(round(area, 4))
-- OUTPUT:
1.7321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:36:21) 
-- CODE:
aresta = 5
area = (3//2 * 3 ** 0.5)
print(round(area, 4))
-- EXECUTION TIME:
0.164749
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.7321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:40:51) 
-- CODE:
aresta = 5
area = (3//2)(3**2(1/2))
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3//2)(3**2(1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:41:16) 
-- CODE:
aresta = 5
area = (3//2)(3 ** 2 (1/2))
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (3//2)(3 ** 2 (1/2))
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:42:35) 
-- CODE:
aresta = 5
area = insert (A == 3//2 * 3 ** 0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = insert (A == 3//2 * 3 ** 0.5)
NameError: name 'insert' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:42:46) 
-- CODE:
aresta = 5
area = (A == 3//2 * 3 ** 0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = (A == 3//2 * 3 ** 0.5)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:43:03) 
-- CODE:
aresta = 5
area = A == 3//2 * 3 ** 0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = A == 3//2 * 3 ** 0.5
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:43:14) 
-- CODE:
aresta = 5
area = 3//2 * 3 ** 0.5
print(round(area, 4))
-- OUTPUT:
1.7321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:44:33) 
-- CODE:
aresta = 5
area = 3//2 * 1.7320 ** 0.5
print(round(area, 4))
-- OUTPUT:
1.3161
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:45:31) 
-- CODE:
aresta = 5
area = 1,5 (1.7320 ** 0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    area = 1,5 (1.7320 ** 0.5)
TypeError: 'int' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:45:42) 
-- CODE:
aresta = 5
area = 1,5 * (1.7320 ** 0.5)
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:46:17) 
-- CODE:
aresta = 5
area = 1,5 * 1.7320 ** 0.5
print(round(area, 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(area, 4))
TypeError: type tuple doesn't define __round__ method
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:46:38) 
-- CODE:
aresta = 5
area = 3 // 2 * 1.7320 ** 0.5
print(round(area, 4))
-- OUTPUT:
1.3161
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:47:01) 
-- CODE:
aresta = 5
area = 3 // 2 * 3 ** 0.5
print(round(area, 4))
-- OUTPUT:
1.7321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:47:47) 
-- CODE:
aresta = 5
area = 3 // 2 * 3 ** 0.5
print(round(area, 4))
-- EXECUTION TIME:
0.123478
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.7321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-07 22:48:08) 
-- CODE:
aresta = 5
area = (3 // 2) * (3 ** 0.5)
print(round(area, 4))
-- OUTPUT:
1.7321
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-07 22:48:12) 
-- CODE:
aresta = 5
area = (3 // 2) * (3 ** 0.5)
print(round(area, 4))
-- EXECUTION TIME:
0.117015
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
1.7321
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:28:46) 
-- CODE:
A = (3/2)*(3*5**0.5)

print(round(A, 4))
-- OUTPUT:
10.0623
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:28:54) 
-- CODE:
A = (3/2)*(3*5**0.5)

print(round(A, 4))
-- EXECUTION TIME:
0.145747
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
10.0623
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:08) 
-- CODE:
A = (3/2)*(3*5**0.5)*2

print(round(A, 4))
-- OUTPUT:
20.1246
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:29:17) 
-- CODE:
A = (3/2)+(3*5**0.5)*2

print(round(A, 4))
-- OUTPUT:
14.9164
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:31:59) 
-- CODE:
A = (3/2)*(3**1/3)

print(round(A, 4))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:12) 
-- CODE:
A = (3/2)*(3**1/3)**2

print(round(A, 4))
-- OUTPUT:
1.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:30) 
-- CODE:
A = (3/2)*(3**3**0.5)**2

print(round(A, 4))
-- OUTPUT:
67.4354
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:34) 
-- CODE:
A = (3/2)*(3**3**0.5)

print(round(A, 4))
-- OUTPUT:
10.0575
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:41) 
-- CODE:
A = (3/2)*(3**0.5)

print(round(A, 4))
-- OUTPUT:
2.5981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:32:49) 
-- CODE:
A = (3/2)*(3**0.5)**2

print(round(A, 4))
-- OUTPUT:
4.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:33:49) 
-- CODE:
A = (3/2)*(3**0.5*5)**2

print(round(A, 4))
-- OUTPUT:
112.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:03) 
-- CODE:
A = (3/2)*(3**0.5*5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:34:18) 
-- CODE:
A = (3/2)*(3**0.5*5**2)

print(round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:25) 
-- CODE:
A = (3/2)*(3*5**1/2)

print(round(A, 4))
-- OUTPUT:
11.25
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:38) 
-- CODE:
A = (3/2)*(3*5**1/2**0.5)

print(round(A, 4))
-- OUTPUT:
15.9099
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:36:43) 
-- CODE:
A = (3/2)*(3*5**1/2**0.5)

print(round(A, 4))
-- EXECUTION TIME:
0.193343
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
15.9099
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:36:52) 
-- CODE:
A = (3/2)*(3*5**1/3**0.5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:37:07) 
-- CODE:
A = (3/2)*(3*5**1/3**0.5)

print(round(A, 4))
-- EXECUTION TIME:
0.163319
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:37:08) 
-- CODE:
A = (3/2)*(3*5**1/3**0.5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:38:04) 
-- CODE:
A = (3/2)*(3*5**1/3**0.5)

print(round(A, 4))
-- EXECUTION TIME:
0.185389
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
12.9904
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:09) 
-- CODE:
A = (3/2)*(3*5**1/3**0.5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:37) 
-- CODE:
A = (3/2)*(3*5**3**0.5)

print(round(A, 4))
-- OUTPUT:
73.091
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:38:54) 
-- CODE:
A = (3/2)*(3*5**1/3)

print(round(A, 4))
-- OUTPUT:
7.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:00) 
-- CODE:
A = (3/2)*(3*5**1/3)**2

print(round(A, 4))
-- OUTPUT:
37.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:39:21) 
-- CODE:
A = (3/2)*(3*5**1/3*3**0.5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:01) 
-- CODE:
A = (3/2)*(3*5**1/3)*(3**0.5)

print(round(A, 4))
-- OUTPUT:
12.9904
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:40:10) 
-- CODE:
A = (3/2)*(3*5**1/2)*(3**0.5)

print(round(A, 4))
-- OUTPUT:
19.4856
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:44:20) 
-- CODE:
A = (3/2)*(3*5**0.5)**2

print(round(A, 4))
-- OUTPUT:
67.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:45:55) 
-- CODE:
A = (3/2)*(3*5**0.5)**2

print (round(math.floor(1.5),math.floor(-1.5), 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(math.floor(1.5),math.floor(-1.5), 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:04) 
-- CODE:
A = (3/2)*(3*5**0.5)**2

print (round(math.floor(1.5), 4))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print (round(math.floor(1.5), 4))
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:46:20) 
-- CODE:
A = (3/2)*(3*5**0.5)**2

print (round(A, 4))
-- OUTPUT:
67.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:46:22) 
-- CODE:
A = (3/2)*(3*5**0.5)**2

print (round(A, 4))
-- EXECUTION TIME:
0.145159
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
67.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:51:04) 
-- CODE:
A = (3/2)*(3**0.5)*(5**0.5)

print (round(A, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:51:12) 
-- CODE:
A = (3/2)*(3**0.5)*(5**0.5)

print (round(A, 4))
-- EXECUTION TIME:
0.150329
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
5.8095
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:55:12) 
-- CODE:
A = (3/2)*(3**0.5)*(5**0.5)
a = 5
print (round(A, 4))
-- OUTPUT:
5.8095
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:55:31) 
-- CODE:
A = (3/2)*(3**0.5)*(5**2)
a = 5
print (round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:56:04) 
-- CODE:
A = (3/2)*(3**1/2)*(5**0.5)
a = 5
print (round(A, 4))
-- OUTPUT:
5.0312
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:56:10) 
-- CODE:
A = (3/2)*(3**1/3)*(5**0.5)
a = 5
print (round(A, 4))
-- OUTPUT:
3.3541
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:56:52) 
-- CODE:
A = (3/2)*(3**0.5)*(5**2)
a = 5
print (round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 11:57:02) 
-- CODE:
A = (3/2)*(3**0.5)*(5**2)
a = 5
print (round(A, 4))
-- OUTPUT:
64.9519
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 11:57:04) 
-- CODE:
A = (3/2)*(3**0.5)*(5**2)
a = 5
print (round(A, 4))
-- EXECUTION TIME:
0.229417
-- TEST CASE 1:
---- input:
xxx
---- correct output:
64.9519
---- user output:
64.9519
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
